styles.css
:root {
	font-size: 20px;
}

@media (max-width: 570px) {
	.home {
		opacity: 50%;
	}

	.house:hover {
		opacity: 100%;
	}
}

@media (min-width: 1595px) {

	body {
		background-size: 100% 140%;
	}
}

@font-face {
	font-family: Rubik;
	src: url(fonts/rubik.woff2);
	font-weight: normal;
	font-style: normal;
	font-display: swap;
}

.icons-div {
	position: relative;
	width: 32px;
	height: 32px;
	bottom: -7px;
	color: white;
}

.icons {
	width: 32px;
	height: 32px;
	color: white;
}

html, body {
	height: 100%;
	display: flex;
	flex-direction: column;
}

.container {
	flex-grow: 1;
	overflow: none;
}

body {
	font-family: Rubik;
	background-color: rgb(24, 0, 35);
	background-image: url(svg/line-curve-bg.svg);
	background-repeat: no-repeat;
	background-position: center;
}

.div-block {
	display: block;
	margin: 0px auto 20px auto;
	padding: 0px 20px 20px 20px;
	border: 4px solid #683f65;
	border-radius: 15px;
	background-color: #25172499;
	max-width: 400px;
	min-width: 87px;
	/*Fuck Firefox because it doesn't support backdrop-filter parameter in CSS. Mozilla, pls fix.*/
	backdrop-filter: blur(20px);
}

.div-margin {
	margin-top: 20px;
}

.p-margin {
	margin: 0px 0px 10px 0px;
}

.footer {
	padding: 20px;
	margin-bottom: 10px;
}

.notfound {
	width: 100%;
	max-width: 400px;
	height: auto;
	margin-top: 20px;
}

h1 {
	font-size: 30px;
	color: #ffffff;
}

p {
	margin: 0;
	color: #ffffff;
}

a, a:link, a:visited {
	padding-right: 5px;
	display: inline-block;
	color: #d47fcd;
	transition-duration: 0.5s;
}

a:hover {
	color: #ffffff;
}

.home {
	z-index: 1;
	position: fixed;
	margin: 0px;
	right: 5px;
	top: 5px;
	width: 54px;
	height: 54px;
	transition-duration: 0.5s;
}

.home:hover {
	width: 60px;
	height: 60px;
}

